--- a/e-commerce/src/App.css
+++ b/e-commerce/src/App.css
@@ -178,6 +178,15 @@
   
 }
 
+.shoppingcarttitle{
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+}
+
+.products h2{
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size:larger;
+}
 
 .amountBlock{
   
