--- a/e-commerce/src/App.css
+++ b/e-commerce/src/App.css
@@ -75,6 +75,36 @@ font-size:12px;
   font-size:12px;
 }
 
+.slider{
+  background-color:#f5f5f5;
+  line-height: 8px;
+  text-align: center;
+  height: 85px;
+  display: flex;
+  align-items: center;
+  justify-content: center ;
+  margin-bottom:40px;
+}
+
+.carouselText{
+  padding:0;
+  margin:0;
+
+}
+
+.slider h1{
+  font-size:14px;
+  line-height: 9px;
+}
+
+.slider button{
+  font-size:12px;
+  border-style: none;
+  border-bottom:1px solid;
+  
+
+}
+
 #navbar {
   display: flex;
   align-items: center;
@@ -129,12 +159,20 @@ font-size:12px;
   
 }
 
+ .categoryTitle {
+  font-size: 25px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: rgb(111, 111, 111);
+  font-weight: 600;
+
+}
+
 
 .containercolumn {
   margin: 20px;
 }
 
-.containercolumn h1 {
+.containercolumn h1{
   font-size: 20px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: rgb(111, 111, 111);
@@ -173,38 +211,51 @@ font-size:12px;
   border-bottom: 1px solid rgb(232, 232, 232);
   margin-left:60px;
   margin-right:60px;
+  justify-content:center;
 
 }
 
 .productsSC img {
-  width: 100px;
+  width: 80px;
   object-fit: scale-down;
+  height:70px
  
 
+}
+.productSCTitle{
+  width:50%;
+  padding-left:90px;
+text-align: left;
 }
 
 .productTitle {
   width:50%;
-  padding-left:20px;
+ 
 text-align: left;
+
   }
 
 .products h1 {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family:Arial, Helvetica, sans-serif;
   font-size: 14px;
   width: 100%;
- 
+  color:rgb(44, 44, 44);
+ font-weight: 300;
+ text-align: center;
 }
 
 .productTitle{
-  height: 60px;
-  
- 
+  height: 100px;
 }
 .productPrice{
   padding-bottom:10px;
 }
+
+.productDes{
+  font-size:12px;
+  color:rgb(123, 123, 123);
+}
+
 
 
 
@@ -252,15 +303,30 @@ float:right;
 .shoppingcartcontainer{
   text-align: center;
 
+
+
+}
+
+.checkout{
+  background-color: rgb(254, 88, 88);
+  color: whitesmoke;
+  width:30%;
+  padding:10px;
+ border-radius: 30px;
+ margin-top:40px;
+ margin-bottom:40px;
+ border:none;
+ 
 }
 
 .backtohome {
-  padding: 8px;
-  background-color: rgb(250, 130, 130);
+  padding: 5px;
+  background-color: rgb(179, 55, 55);
   color: white;
   border: none;
   border-radius: 100px;
   font-weight: 600;
+  margin:10px;
   
 }
 
@@ -315,15 +381,13 @@ float:right;
 
 .totalpriceSC{
   color:rgb(88, 88, 88);
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-  "Lucida Sans", Arial, sans-serif;
   font-size: 18px;
 }
 
 
 
 
-@media screen and (max-width: 891px) {
+@media screen and (max-width: 950px) {
   .header {
     background-color: rgba(255, 255, 255);
   }
